--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">mylab</string>
+    <string name="TeamA">TeamA</string>
+    <string name="teamb">TeamB</string>
+    <string name="_0">0</string>
+    <string name="_3_points">+3 POINTS</string>
+    <string name="_2_points">+2 POINTS</string>
+    <string name="free_throw">FREE THROW</string>
 </resources>
